[gd_scene load_steps=2 format=3 uid="uid://dv03qx1usypc6"]

[ext_resource type="Script" uid="uid://c7gqtvuexyj5j" path="res://home.gd" id="1_tt30a"]

[node name="Home" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt30a")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.5
offset_right = 98.5
offset_bottom = 51.0
grow_horizontal = 2
text = "Battle Quiz"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -64.0
offset_right = 142.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ExitToDesktop" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit To Desktop"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="ConfirmExit" type="ConfirmationDialog" parent="."]
title = "Confirm Exit"
size = Vector2i(297, 100)
ok_button_text = "Yes"
dialog_text = "Are you sure you want to exit game?"
cancel_button_text = "No"

[connection signal="pressed" from="VBoxContainer/ExitToDesktop" to="." method="_on_exit_to_desktop_pressed"]
[connection signal="confirmed" from="ConfirmExit" to="." method="_on_confirm_exit_confirmed"]
